@@ -1,4 +1,5 @@
 0.17
+ - Rewrite examples in doc to version with indented output.
 
 0.16 2024-04-21T09:16:38+02:00
  - Copy CSS links, Javascript and Javascript links from component to main
